--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h1>Curriculum Vitae</h1>
-        <img src="image rismawan.jpg" width="100px" />
+        <img src="image Rismawan.jpg" width="100px" />
 
         <h2>Data Pribadi</h2>
         <p>Nama: Rismawan Maulana Sidiq</p>
