--- a/index.html
+++ b/index.html
@@ -6,26 +6,38 @@
     <title>Curriculum Vitae</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Curriculum Vitae</h1>
-        <img src="image Rismawan.jpg" width="100px" />
+    <body style="background-color: #929292;">
+    <div class="container" style="text-align: center; font-family: Arial, sans-serif;">
+        <h1 style="color: #00d2fc;">Curriculum Vitae</h1>
+        <img src="image_Rismawan.jpg" width="100px" style="border-radius: 50%; margin-top: 10px;" />
 
-        <h2>Data Pribadi</h2>
+        <h2 style="color: #a43838;">Data Pribadi</h2>
         <p>Nama: Rismawan Maulana Sidiq</p>
-        <p>Email:Rismawanm170@gmail.com</p>
+        <p>Tempat: Perum Buah Batu i 51</p>
+        <p>Email: Rismawanm170@gmail.com</p>
 
-        <h2>Pendidikan</h2>
-        <ul>
-            <li>Madrasah Aliyah Negri - 2018</li>
-            <li>Universitas Telkom - Jurusan Sistem Informaso - 2021</li>
-        </ul>
+        <h2 style="color: #a43838;">Table Riwayat Pendidikan</h2>
+        <table border="1" style="border-collapse: collapse; width: 80%; margin: 10px auto;">
+            <tr>
+                <th style="padding: 10px; background-color: #333; color: #fff;">Pendidikan</th>
+                <th style="padding: 10px; background-color: #333; color: #fff;">Tahun</th>
+            </tr>
+            <tr>
+                <td style="padding: 10px;">Madrasah Aliyah Negri</td>
+                <td style="padding: 10px;">2018</td>
+            </tr>
+            <tr>
+                <td style="padding: 10px;">Universitas Telkom - Jurusan Sistem Informasi</td>
+                <td style="padding: 10px;">2021</td>
+            </tr>
+        </table>
 
-        <h2>Kemampuan</h2>
+        <h2 style="color: #a43838;">Kemampuan</h2>
         <ul>
             <li>Berenang, bermain</li>
         </ul>
 
-        <h2>Hobi</h2>
+        <h2 style="color: #a43838;">Hobi</h2>
         <p>Membaca buku, bermain musik, bersepeda</p>
     </div>
 </body>
